<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinalProjectApp</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_game_screen">GameScreenActivity</string>
    <string name="run">Run</string>
    <string name="code">Code</string>
    <string name="reset">Reset</string>
    <string name="title_activity_code_writing">CodeWritingActivity</string>
    <string name="positive">positive</string>
    <string name="negative">negative</string>
    <string name="title_activity_code_running">CodeRunningActivity</string>
    <string name="toBeginning">|&lt;</string>
    <string name="previous">&lt;</string>
    <string name="next">></string>
    <string name="toEnd">>|</string>
    <string name="enter_text_here">Enter Text Here</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="graphics">graphics</string>
    <string name="do_not_show_this_message_again">Do not show this message again</string>
    <string name="misc">Misc</string>
    <string name="level_instructions_off">Level instructions off</string>
    <string name="level_instructions_on">Level instructions on</string>
    <string name="clear">Clear</string>
    <string name="animation_off">Animation off</string>
    <string name="animation_on">Animation on</string>
    <string name="swipe_mode_on">Swipe mode on</string>
    <string name="swipe_mode_off">Swipe mode off</string>
    <string name="variables_">Variables:</string>
    <string name="title_activity_wing_picking">WingPickingActivity</string>
    <string name="tutorial">Tutorial</string>
    <string name="maze_wing">Maze wing</string>
    <string name="start_">Start!</string>
    <string name="if_">If?&#8230;</string>
    <string name="eat_your_variables_">Eat your Variables!</string>
    <string name="dat_loop_">Dat Loop...</string>
    <string name="numbers">Numbers</string>
    <string name="booleans">Booleans</string>
    <string name="variables">Variables</string>
    <string name="assignment">Assignment</string>
    <string name="inc_dec">Inc / Dec</string>
    <string name="title_activity_maze_wing">MazeWingActivity</string>
    <string name="moves">Moves</string>
    <string name="basic_move">Basic move</string>
    <string name="more_moves">More moves</string>
    <string name="all_moves">All moves</string>
    <string name="title_activity_inventory_wing">InventoryWingActivity</string>
    <string name="inventory_wing">Inventory wing</string>
    <string name="swap">Swap</string>
    <string name="diagonal">Diagonal</string>
    <string name="firewall">FireWall</string>
    <string name="don_t_play_with_fire">Don\'t play with fire</string>
    <string name="sort">Sort</string>
    <string name="bubble">Bubble</string>

</resources>