<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreenActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout_Screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/LinearLayout_GameScreen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_weight="0.75"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView_LevelNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_ControlButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:text="@string/run" />

            <Button
                android:id="@+id/buttonCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:text="@string/code" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>